[package]
name = "egui_widget_themenator"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
description = "An egui themes crate"
keywords = ["egui", "eframe", "ui", "theme"]
categories = ["gui", "graphics", "rendering", "colors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/white-rabbit-scientific/egui-widget-themenator"
documentation = "https://docs.rs/egui-widget-themenator"
readme = "README.md"
homepage = "https://github.com/white-rabbit-scientific/egui-widget-themenator"

exclude = [
    ".github/",
    ".gitignore",
    "images/",
]

[dependencies]
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
