[package]
name = "egui_widget_themenator"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
description = "An egui Catppuccin theme-widget crate"
keywords = ["egui", "eframe", "ui", "theme", "widget"]
categories = ["gui", "graphics", "rendering", "colors", "widget"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/white-rabbit-scientific/egui-widget-themenator"
documentation = "https://docs.rs/egui-widget-themenator"
readme = "README.md"
homepage = "https://github.com/white-rabbit-scientific/egui-widget-themenator"

exclude = [
    ".github/",
    ".gitignore",
]

[dependencies]
egui = "0.33"
indexmap = "2.12.1"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
